--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ clone_folder: c:\dev\src
 
 
 build_script:
-  - echo EIGEN_CTEST_ARGS: %EIGEN_CTEST_ARGS%
+  - echo "EIGEN_CTEST_ARGS: %EIGEN_CTEST_ARGS%"
   - cd c:\dev
   - mkdir build
   - cd build
