--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.0.{build}
 
 environment:
-  EIGEN_CTEST_ARGS: -j4
+  EIGEN_CTEST_ARGS: -j2
   matrix:
     - GENERATOR: "Visual Studio 15 2017"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
@@ -13,6 +13,6 @@ build_script:
   - cd c:\dev
   - mkdir build
   - cd build
-  - cmake -G"%GENERATOR%" ../src
+  - cmake -G"%GENERATOR%"  -DCMAKE_CXX_FLAGS="/MP2 /DEIGEN_STRONG_INLINE=inline" ../src
   - ctest -C Release -D Experimental
 
